--- a/Analise_de_Dados_Python_Cancelamento_de_cartões.ipynb
+++ b/Analise_de_Dados_Python_Cancelamento_de_cartões.ipynb
@@ -206,7 +206,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Apresentando os primeiros 05 registros da base de dsdos.\n",
+        "# Apresentando os primeiros 05 registros da base de dados.\n",
         "df.head()"
       ],
       "metadata": {
